# smol-course

./: .gitignore  pyproject.toml
.devcontainer/: devcontainer.json
1_instruction_tuning/notebooks/: chat_templates_example.ipynb  sft_finetuning_example.ipynb
