[tool.poetry]
name = "smol-course"
version = "0.1.0"
description = "a smol course on llms"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "smol_course"}]

[tool.poetry.dependencies]
python = "^3.11"
datasets = "^3.1.0"
huggingface-hub = "^0.26.3"
lighteval= "^0.6.2"
ipywidgets = "^8.1.5"
transformers = "^4.46.3"
trl = "^0.12.1"
bitsandbytes = "^0.45.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
